Rename some files Fix some dependency conflicts Fix some typos Add add-opens plugin